<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eventation</string>
    <string name="action_settings">Settings</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_group">Groups</string>
    <string name="groups">Groups</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="month">Sep</string>
    <string name="day">1st</string>
    <string name="year">2013</string>
    <string name="event_name">Event Name</string>
    <string name="remove_event">Remove Event</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_sing_in_sign_up">SingInSignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="title_activity_sign_up_task">SignUpTask</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="title_activity_group_view">Group</string>
    <string name="mygroups">My Groups</string>
    <string name="group_description">Group Description</string>
    <string name="create_event">Create Event</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="event_description">Event Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="subscribed_groups">Subscribed Groups</string>
    <string name="add_group">Add Group</string>
    <string name="title_activity_find_group">FindGroupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="find_group">Find Group</string>
    <string name="title_activity_group_sign_up">GroupSignUpActivity</string>
    <string name="title_activity_group_subscriber_sqlite_helper">GroupSubscriberSQLiteHelper</string>

</resources>
